--- a/Frontend/user/index.html
+++ b/Frontend/user/index.html
@@ -7,23 +7,24 @@
         <link rel="icon" type="image/x-icon" href="images/logo.png" />
         <title>NCART | Night City Area Rapid Transit</title>
     </head>
+
     <body>
         <main>
             <nav>
-                <div id="menu1">
+                <div id="menuLeft">
                     <div>
                         <a href="index.html"
                             ><img src="images/navlogo.png" alt=""
                         /></a>
                     </div>
                 </div>
-                <div id="menu2">
+                <div id="menuRight">
                     <div><a href="index.html">KEZDŐLAP</a></div>
                     <div><a href="#">UTAZÁS TERVEZÉS</a></div>
                 </div>
             </nav>
             <header>
-                <div id="head1">
+                <div id="headerLeft">
                     <div id="head2">
                         <div id="head3">
                             <img src="images/logo.png" alt="" />
@@ -43,12 +44,16 @@
                             készült összesítőnket. A TL;DR áttekintésünkkel
                             profi módon navigálhat az NCART-ban. Kerüld ki a
                             bandákat közvetlenül az NCPD-től származó biztonsági
-                            tippekkel. Bármi legyen is Night City-ben az álma,
-                            ezzel az oldallal minden bizonnyal valóra válik.
+                            tippekkel.
+                            <span style="font-weight: bold"
+                                >Bármi legyen is Night City-ben az álma, ezzel
+                                az oldallal minden bizonnyal valóra fog
+                                válni.</span
+                            >
                         </p>
                     </div>
                 </div>
-                <div id="vid">
+                <div id="headerRight">
                     <video autoplay muted loop>
                         <source src="images/vid.mp4" type="video/mp4" />
                     </video>
@@ -56,95 +61,79 @@
             </header>
             <article>
                 <div id="history">
-                    <div><img src="images/nigth.png" alt="" /></div>
-                    <div>
-                        <h1>VÁROS TÖRTÉNELME</h1>
-                        <h3>
-                            A Night City története egyetlen ember álmával
-                            kezdődik: Richard Night látnok iparossal. A 20.
-                            század utolsó éveiben Night-nak víziója volt a jövő
-                            városáról, amelyet nem rontottak el a régi
-                            elképzelések és a fojtogató szabályok.
-                        </h3>
-                        <p>
-                            A világ legnagyobb vállalatainak támogatásával
-                            megvalósította elképzelését egy merész
-                            ingatlanfejlesztéssel a kaliforniai
-                            Coronado-öbölben. Ahogy az Egyesült Államok többi
-                            része elkezdett összeomlani, a vállalkozók és a
-                            lelkes befektetők sereglettek a holnap ebbe a
-                            nagyvárosába. Hamarosan példátlan növekedés és jólét
-                            következett.<br />
-                            Sajnos a megrögzött érdekek és a féltékeny riválisok
-                            pokolian szabotálták Night látomását, és megtörtént
-                            az elképzelhetetlen: Richard Night-ot a saját
-                            otthonában gyilkolták meg ismeretlen támadók.
-                            Alkotása - amelyet tiszteletére „Éjszakai városnak”
-                            kereszteltek - mégis tovább élt. Az ezt követő
-                            években ledobta magáról az Egyesült Államok
-                            uralmának igáját, és fürgén átvészelte az
-                            elképzelhetetlen katasztrófákat - beleértve a
-                            szívét, a Corporate Plaza-t is elpusztító nukleáris
-                            robbanást - minden lomha és dagadt nemzeti kormány
-                            segítsége nélkül. A siker ragyogó jelzőfénye, a
-                            Night City rugalmassága továbbra is inspirációt
-                            jelent a világ számára.
-                        </p>
-                        <img src="" alt="" />
-                        <p>
-                            POLGÁRMESTERÜNK SZAVA Amikor először indultam az
-                            éjszakai városi tanácsba, hetente körülbelül egy pár
-                            banditót égettem el. A körzetem minden utcáját,
-                            sikátorát és megaépületét bejártam. Sokat láttam és
-                            még sok mindent hallottam. A végére azt hittem,
-                            mindent tudok erről a városról.
-                            <br />
-                            Amikor megmutatták ezt az oldalt, rájöttem, mekkorát
-                            tévedtem. Szinte rosszul érzem magam, hogy felfedjem
-                            ezeket a titkokat neked, szép városunk látogatóinak
-                            és lakóinak. Szerencsére még rengeteg dolgot kell
-                            felfedezned magadnak.
-                            <br />
-                            ~ Lucius Rhyne
-                        </p>
+                    <div id="historyLeft">
+                        <img src="images/nigth.png" alt="" />
+                    </div>
+                    <div id="historyRight">
+                        <div id="htop">
+                            <h1>VÁROSUNK TÖRTÉNELME</h1>
+                            <h2>
+                                A Night City története egyetlen ember álmával
+                                kezdődik: Richard Night látnok iparossal. A 20.
+                                század utolsó éveiben Night-nak víziója volt a
+                                jövő városáról, amelyet nem rontottak el a régi
+                                elképzelések és a fojtogató szabályok.
+                            </h2>
+                        </div>
+                        <div id="hsection">
+                            <div id="hleft">
+                                <p>
+                                    A világ legnagyobb vállalatainak
+                                    támogatásával megvalósította elképzelését
+                                    egy merész ingatlanfejlesztéssel a
+                                    kaliforniai Coronado-öbölben. Ahogy az
+                                    Egyesült Államok többi része elkezdett
+                                    összeomlani, a vállalkozók és a lelkes
+                                    befektetők sereglettek a holnap ebbe a
+                                    nagyvárosába. Hamarosan példátlan növekedés
+                                    és jólét következett.
+                                </p>
+                                <br />
+                                <p>
+                                    Sajnos a megrögzött érdekek és a féltékeny
+                                    riválisok pokolian szabotálták Night
+                                    látomását, és megtörtént az
+                                    elképzelhetetlen: Richard Night-ot a saját
+                                    otthonában gyilkolták meg ismeretlen
+                                    támadók. Alkotása - amelyet tiszteletére
+                                    „Éjszakai városnak” kereszteltek - mégis
+                                    tovább élt. Az ezt követő években ledobta
+                                    magáról az Egyesült Államok uralmának
+                                    igáját, és fürgén átvészelte az
+                                    elképzelhetetlen katasztrófákat - beleértve
+                                    a szívét, a Corporate Plaza-t is elpusztító
+                                    nukleáris robbanást - minden lomha és dagadt
+                                    nemzeti kormány segítsége nélkül. A siker
+                                    ragyogó jelzőfénye, a Night City
+                                    rugalmassága továbbra is inspirációt jelent
+                                    a világ számára.
+                                </p>
+                            </div>
+                            <div id="hright">
+                                <h2>POLGÁRMESTERÜNK SZAVAI</h2>
+                                <p>
+                                    <br />
+                                    Amikor először indultam a városi tanácsba,
+                                    hetente körülbelül egy pár banditot égettem
+                                    el. A körzetem minden utcáját, sikátorát és
+                                    megaépületét bejártam. Sokat láttam és még
+                                    sok mindent hallottam. A végére azt hittem,
+                                    mindent tudok erről a városról.
+                                    <br /><br />
+                                    Amikor megmutatták ezt az oldalt, rájöttem,
+                                    mekkorát tévedtem. Szinte rosszul érzem
+                                    magam, hogy felfedjem ezeket a titkokat
+                                    neked, szép városunk látogatóinak és
+                                    lakóinak. Szerencsére még rengeteg dolgot
+                                    kell felfedezned magadnak.
+                                    <br />
+                                    ~ Lucius Rhyne
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                
-                <div>
+                <div id="transport">
                     <h1>NIGHT CITY KÖZLEKEDÉS</h1>
                     <div>
                         <h1>NCET</h1>
