keruletek leirasanak megoldasa folyamatban

--- a/Frontend/user/index.html
+++ b/Frontend/user/index.html
@@ -4,10 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
-        <link rel="icon" type="image/x-icon" href="images/logo.png" />
-        <title>NCART | Night City Area Rapid Transit</title>
+        <link rel="icon" type="image/x-icon" href="images/fav4.png" />
+        <title>NCTC | Night City Transit Corporation</title>
     </head>
-
     <body>
         <main>
             <nav>
@@ -45,11 +44,10 @@
                             profi módon navigálhat az NCART-ban. Kerüld ki a
                             bandákat közvetlenül az NCPD-től származó biztonsági
                             tippekkel.
-                            <span style="font-weight: bold"
-                                >Bármi legyen is Night City-ben az álma, ezzel
-                                az oldallal minden bizonnyal valóra fog
-                                válni.</span
-                            >
+                            <span style="font-weight: bold">
+                                Bármi legyen is Night City-ben az álma, ezzel az
+                                oldallal minden bizonnyal valóra fog válni.
+                            </span>
                         </p>
                     </div>
                 </div>
@@ -63,6 +61,7 @@
                 <div id="history">
                     <div id="historyLeft">
                         <img src="images/nigth.png" alt="" />
+                        <h2>Richard Night</h2>
                     </div>
                     <div id="historyRight">
                         <div id="htop">
@@ -111,81 +110,112 @@
                             </div>
                             <div id="hright">
                                 <h2>POLGÁRMESTERÜNK SZAVAI</h2>
+                                <br />
                                 <p>
-                                    <br />
                                     Amikor először indultam a városi tanácsba,
                                     hetente körülbelül egy pár banditot égettem
                                     el. A körzetem minden utcáját, sikátorát és
                                     megaépületét bejártam. Sokat láttam és még
                                     sok mindent hallottam. A végére azt hittem,
                                     mindent tudok erről a városról.
-                                    <br /><br />
+                                </p>
+                                <br />
+                                <p>
                                     Amikor megmutatták ezt az oldalt, rájöttem,
                                     mekkorát tévedtem. Szinte rosszul érzem
                                     magam, hogy felfedjem ezeket a titkokat
                                     neked, szép városunk látogatóinak és
                                     lakóinak. Szerencsére még rengeteg dolgot
                                     kell felfedezned magadnak.
-                                    <br />
-                                    ~ Lucius Rhyne
                                 </p>
+                                <br />
+                                <p id="mayor">~ Lucius Rhyne</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div id="transport">
-                    <h1>NIGHT CITY KÖZLEKEDÉS</h1>
-                    <div>
-                        <h1>NCET</h1>
-                        <p>
-                            Az NCET, vagyis a Night City Electric Transit egy
-                            sima eszköz a város körüli gyors utazáshoz. Emberek
-                            tömegei használják nap mint nap, mivel ez a
-                            legolcsóbb és gyakran a legkényelmesebb módja annak,
-                            hogy eljussanak oda, ahol el kell jutniuk, amikor el
-                            kell jutniuk. A rendszer számos hozzáférési ponttal
-                            büszkélkedhet, amelyek az egész városra kiterjedő
-                            hálót alkotnak, és olyan csekély gonddal és
-                            fejfájással kavargatják egyikről a másikra, mint a
-                            BlastDance legújabb slágereinek előhívása.
-                        </p>
-                        <img src="" alt="" />
+                    <h1 id="transportTitle">NIGHT CITY KÖZLEKEDÉS</h1>
+                    <div id="cards">
+                        <div class="card">
+                            <h1>NCET | Night City Electric Transit</h1>
+                            <div class="cardimg">
+                                <img src="images/tram.png" alt="" />
+                            </div>
+                            <p>
+                                Az NCET, vagyis a Night City Electric Transit
+                                egy sima eszköz a város körüli gyors utazáshoz.
+                                Emberek tömegei használják nap mint nap, mivel
+                                ez a legolcsóbb és gyakran a legkényelmesebb
+                                módja annak, hogy eljussanak oda, ahol el kell
+                                jutniuk, amikor el kell jutniuk. A rendszer
+                                számos hozzáférési ponttal büszkélkedhet,
+                                amelyek az egész városra kiterjedő hálót
+                                alkotnak, és olyan csekély gonddal és
+                                fejfájással kavargatják egyikről a másikra, mint
+                                a BlastDance legújabb slágereinek előhívása.
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h1>NCBT | Night City Bus Transit</h1>
+                            <div class="cardimg">
+                                <img src="images/bus.png" alt="" />
+                            </div>
+                            <p>
+                                Az NCBT, vagyis a Night City Bus Transit egy
+                                sima eszköz a város körüli gyors utazáshoz.
+                                Emberek tömegei használják nap mint nap, mivel
+                                ez a legolcsóbb és gyakran a legkényelmesebb
+                                módja annak, hogy eljussanak oda, ahol el kell
+                                jutniuk, amikor el kell jutniuk. A rendszer
+                                számos hozzáférési ponttal büszkélkedhet,
+                                amelyek az egész városra kiterjedő hálót
+                                alkotnak, és olyan csekély gonddal és
+                                fejfájással kavargatják egyikről a másikra, mint
+                                a BlastDance legújabb slágereinek előhívása.
+                            </p>
+                        </div>
+                        <div class="card">
+                            <h1>NCART | Night City Area Rapid Transit</h1>
+
+                            <div class="cardimg">
+                                <img src="images/metro.png" alt="" />
+                            </div>
+                            <p>
+                                Az NCART, vagyis a Night City Area Rapid Transit
+                                egy sima eszköz a város körüli gyors utazáshoz.
+                                Emberek tömegei használják nap mint nap, mivel
+                                ez a legolcsóbb és gyakran a legkényelmesebb
+                                módja annak, hogy eljussanak oda, ahol el kell
+                                jutniuk, amikor el kell jutniuk. A rendszer
+                                számos hozzáférési ponttal büszkélkedhet,
+                                amelyek az egész városra kiterjedő hálót
+                                alkotnak, és olyan csekély gonddal és
+                                fejfájással kavargatják egyikről a másikra, mint
+                                a BlastDance legújabb slágereinek előhívása.
+                            </p>
+                        </div>
                     </div>
-                    <div>
-                        <h1>NCART</h1>
-                        <p>
-                            Az NCART, vagyis a Night City Area Rapid Transit egy
-                            sima eszköz a város körüli gyors utazáshoz. Emberek
-                            tömegei használják nap mint nap, mivel ez a
-                            legolcsóbb és gyakran a legkényelmesebb módja annak,
-                            hogy eljussanak oda, ahol el kell jutniuk, amikor el
-                            kell jutniuk. A rendszer számos hozzáférési ponttal
-                            büszkélkedhet, amelyek az egész városra kiterjedő
-                            hálót alkotnak, és olyan csekély gonddal és
-                            fejfájással kavargatják egyikről a másikra, mint a
-                            BlastDance legújabb slágereinek előhívása.
-                        </p>
-                        <img src="" alt="" />
-                    </div>
-                    <div>
-                        <h1>NCBT</h1>
-                        <p>
-                            Az NCBT, vagyis a Night City Bus Transit egy sima
-                            eszköz a város körüli gyors utazáshoz. Emberek
-                            tömegei használják nap mint nap, mivel ez a
-                            legolcsóbb és gyakran a legkényelmesebb módja annak,
-                            hogy eljussanak oda, ahol el kell jutniuk, amikor el
-                            kell jutniuk. A rendszer számos hozzáférési ponttal
-                            büszkélkedhet, amelyek az egész városra kiterjedő
-                            hálót alkotnak, és olyan csekély gonddal és
-                            fejfájással kavargatják egyikről a másikra, mint a
-                            BlastDance legújabb slágereinek előhívása.
-                        </p>
-                        <img src="" alt="" />
-                    </div>
-                    <div>
-                        <h1>KERÜLETEK</h1>
-                        <div></div>
+                </div>
+                <div id="districts">
+                    <h1 id="districtsTitle">KERÜLETEK</h1>
+                    <div id="descriptions">
+                        <div class="areas">
+                            <div id="cent"><h1>BELVÁROS</h1></div>
+                            <div id="wats"><h1>WATSON</h1></div>
+                            <div id="hey"><h1>HEYWOOD</h1></div>
+                            <div id="west"><h1>WESTBROOK</h1></div>
+                        </div>
+                        <div id="summary">
+                            <div id="description"></div>
+                            <div id="slider"></div>
+                        </div>
+                        <div class="areas">
+                            <div id="santo"><h1>SANTO DOMINGO</h1></div>
+                            <div id="pacific"><h1>PACIFICA</h1></div>
+                            <div id="out"><h1>OUTSCKIRTS</h1></div>
+                            <div id="dog"><h1>DOGTOWN</h1></div>
+                        </div>
                     </div>
                 </div>
             </article>
