--- a/Frontend/user/index.html
+++ b/Frontend/user/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
-        <link rel="icon" type="image/x-icon" href="images/fav4.png" />
+        <link rel="icon" type="image/x-icon" href="images/fav.png" />
         <title>NCTC | Night City Transit Corporation</title>
     </head>
     <body>
@@ -213,7 +213,7 @@
                         <div class="areas">
                             <div id="santo"><h1>SANTO DOMINGO</h1></div>
                             <div id="pacific"><h1>PACIFICA</h1></div>
-                            <div id="out"><h1>OUTSCKIRTS</h1></div>
+                            <div id="out"><h1>KÜLVÁROS</h1></div>
                             <div id="dog"><h1>DOGTOWN</h1></div>
                         </div>
                     </div>
