teljesen reszponziv kezdooldal

--- a/Frontend/user/index.html
+++ b/Frontend/user/index.html
@@ -18,7 +18,7 @@
                     </div>
                 </div>
                 <div id="menuRight">
-                    <div><a href="index.html">KEZDŐLAP</a></div>
+                    <div id="start"><a href="index.html">KEZDŐLAP</a></div>
                     <div><a href="#">UTAZÁS TERVEZÉS</a></div>
                 </div>
             </nav>
@@ -26,7 +26,7 @@
                 <div id="headerLeft">
                     <div id="head2">
                         <div id="head3">
-                            <img src="images/logo.png" alt="" />
+                            <img src="images/logo.png" alt="Night City" />
                         </div>
                         <div id="head4">
                             <h1>ÜDVÖZÖLJÜK NIGHT CITY VÁROSÁBAN</h1>
@@ -43,11 +43,8 @@
                             készült összesítőnket. A TL;DR áttekintésünkkel
                             profi módon navigálhat az NCART-ban. Kerüld ki a
                             bandákat közvetlenül az NCPD-től származó biztonsági
-                            tippekkel.
-                            <span style="font-weight: bold">
-                                Bármi legyen is Night City-ben az álma, ezzel az
-                                oldallal minden bizonnyal valóra fog válni.
-                            </span>
+                            tippekkel. Bármi legyen is Night City-ben az álma,
+                            ezzel az oldallal minden bizonnyal valóra fog válni.
                         </p>
                     </div>
                 </div>
@@ -58,23 +55,23 @@
                 </div>
             </header>
             <article>
-                <div id="history">
-                    <div id="historyLeft">
-                        <img src="images/nigth.png" alt="" />
-                        <h2>Richard Night</h2>
+                <section id="history">
+                    <div id="history_title">
+                        <h1>VÁROSUNK TÖRTÉNELME</h1>
+                        <h2>
+                            A Night City története egyetlen ember álmával
+                            kezdődik: Richard Night látnok iparossal. A 20.
+                            század utolsó éveiben Night-nak víziója volt a jövő
+                            városáról, amelyet nem rontottak el a régi
+                            elképzelések és a fojtogató szabályok.
+                        </h2>
                     </div>
-                    <div id="historyRight">
-                        <div id="htop">
-                            <h1>VÁROSUNK TÖRTÉNELME</h1>
-                            <h2>
-                                A Night City története egyetlen ember álmával
-                                kezdődik: Richard Night látnok iparossal. A 20.
-                                század utolsó éveiben Night-nak víziója volt a
-                                jövő városáról, amelyet nem rontottak el a régi
-                                elképzelések és a fojtogató szabályok.
-                            </h2>
+                    <div id="history_content">
+                        <div id="history_left">
+                            <img src="images/nigth.png" alt="Richard Night" />
+                            <h2>Richard Night</h2>
                         </div>
-                        <div id="hsection">
+                        <div id="history_right">
                             <div id="hleft">
                                 <p>
                                     A világ legnagyobb vállalatainak
@@ -95,17 +92,17 @@
                                     elképzelhetetlen: Richard Night-ot a saját
                                     otthonában gyilkolták meg ismeretlen
                                     támadók. Alkotása - amelyet tiszteletére
-                                    „Éjszakai városnak” kereszteltek - mégis
-                                    tovább élt. Az ezt követő években ledobta
-                                    magáról az Egyesült Államok uralmának
-                                    igáját, és fürgén átvészelte az
-                                    elképzelhetetlen katasztrófákat - beleértve
-                                    a szívét, a Corporate Plaza-t is elpusztító
-                                    nukleáris robbanást - minden lomha és dagadt
-                                    nemzeti kormány segítsége nélkül. A siker
-                                    ragyogó jelzőfénye, a Night City
-                                    rugalmassága továbbra is inspirációt jelent
-                                    a világ számára.
+                                    „Night City”-nek kereszteltek - mégis tovább
+                                    élt. Az ezt követő években ledobta magáról
+                                    az Egyesült Államok uralmának igáját, és
+                                    fürgén átvészelte az elképzelhetetlen
+                                    katasztrófákat - beleértve a szívét, a
+                                    Corporate Plaza-t is elpusztító nukleáris
+                                    robbanást - minden lomha és dagadt nemzeti
+                                    kormány segítsége nélkül. A siker ragyogó
+                                    jelzőfénye, a Night City rugalmassága
+                                    továbbra is inspirációt jelent a világ
+                                    számára.
                                 </p>
                             </div>
                             <div id="hright">
@@ -133,12 +130,12 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </section>
                 <div id="transport">
                     <h1 id="transportTitle">NIGHT CITY KÖZLEKEDÉS</h1>
                     <div id="cards">
                         <div class="card">
-                            <h1>NCET | Night City Electric Transit</h1>
+                            <h1>NCET</h1>
                             <div class="cardimg">
                                 <img src="images/tram.png" alt="" />
                             </div>
@@ -157,7 +154,7 @@
                             </p>
                         </div>
                         <div class="card">
-                            <h1>NCBT | Night City Bus Transit</h1>
+                            <h1>NCBT</h1>
                             <div class="cardimg">
                                 <img src="images/bus.png" alt="" />
                             </div>
@@ -176,7 +173,7 @@
                             </p>
                         </div>
                         <div class="card">
-                            <h1>NCART | Night City Area Rapid Transit</h1>
+                            <h1>NCART</h1>
 
                             <div class="cardimg">
                                 <img src="images/metro.png" alt="" />
