--- a/Frontend/user/index.html
+++ b/Frontend/user/index.html
@@ -198,20 +198,20 @@
                     <h1 id="districtsTitle">KERÜLETEK</h1>
                     <div id="descriptions">
                         <div class="areas">
-                            <div id="cent"><h1>BELVÁROS</h1></div>
-                            <div id="wats"><h1>WATSON</h1></div>
-                            <div id="hey"><h1>HEYWOOD</h1></div>
-                            <div id="west"><h1>WESTBROOK</h1></div>
+                            <div id="cent"><button>BELVÁROS</button></div>
+                            <div id="wats"><button>WATSON</button></div>
+                            <div id="hey"><button>HEYWOOD</button></div>
+                            <div id="west"><button>WESTBROOK</button></div>
                         </div>
                         <div id="summary">
                             <div id="description"></div>
                             <div id="slider"></div>
                         </div>
                         <div class="areas">
-                            <div id="santo"><h1>SANTO DOMINGO</h1></div>
-                            <div id="pacific"><h1>PACIFICA</h1></div>
-                            <div id="out"><h1>KÜLVÁROS</h1></div>
-                            <div id="dog"><h1>DOGTOWN</h1></div>
+                            <div id="santo"><button>SANTO DOMINGO</button></div>
+                            <div id="pacific"><button>PACIFICA</button></div>
+                            <div id="out"><button>KÜLVÁROS</button></div>
+                            <div id="dog"><button>DOGTOWN</button></div>
                         </div>
                     </div>
                 </div>
