--- a/Frontend/user/index.html
+++ b/Frontend/user/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="hu">
     <head>
+        https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_topnav
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+        />
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" type="image/x-icon" href="images/fav.png" />
+        <script src="scripts/main.js"></script>
         <title>NCTC | Night City Transit Corporation</title>
     </head>
     <body>
@@ -20,6 +26,14 @@
                 <div id="menuRight">
                     <div id="start"><a href="index.html">KEZDŐLAP</a></div>
                     <div><a href="#">UTAZÁS TERVEZÉS</a></div>
+                </div>
+                <div id="hamburger">
+                    <a
+                        href="javascript:void(0);"
+                        class="icon"
+                        onclick="myFunction()"
+                        ><i class="bi bi-list"></i>
+                    </a>
                 </div>
             </nav>
             <header>
