--- a/Frontend/user/index.html
+++ b/Frontend/user/index.html
@@ -24,6 +24,7 @@
                 </div>
                 <div id="menuRight">
                     <div id="start"><a href="#">KEZDŐLAP</a></div>
+                    <div ><a href="http://localhost:3000/login">BEJELENTKEZÉS</a></div>
                     <div id="plan"><a href="map.html">UTAZÁS TERVEZÉS</a></div>
                 </div>
                 <div id="hamburger">
