sikeres reszponziv hamburger menu

--- a/Frontend/user/index.html
+++ b/Frontend/user/index.html
@@ -9,6 +9,7 @@
         />
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" type="image/x-icon" href="images/fav.png" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
         <script src="scripts/main.js"></script>
         <title>NCTC | Night City Transit Corporation</title>
     </head>
@@ -17,13 +18,11 @@
             <nav class="topnav" id="myTopnav">
                 <div id="menuLeft">
                     <div>
-                        <a href="#"
-                            ><img src="images/navlogo.png" alt=""
-                        /></a>
+                        <img src="images/navlogo.png" alt="" />
                     </div>
                 </div>
                 <div id="menuRight">
-                    <div id="start"><a href="#">KEZDŐLAP</a></div>
+                    <div id="start">KEZDŐLAP</div>
                     <div id="plan"><a href="map.html">UTAZÁS TERVEZÉS</a></div>
                 </div>
                 <div id="hamburger">
@@ -153,17 +152,19 @@
                                 <img src="images/tram.png" alt="" />
                             </div>
                             <p>
-                                Az NCET, vagyis a Night City Electric Transit
-                                egy sima eszköz a város körüli gyors utazáshoz.
-                                Emberek tömegei használják nap mint nap, mivel
-                                ez a legolcsóbb és gyakran a legkényelmesebb
-                                módja annak, hogy eljussanak oda, ahol el kell
-                                jutniuk, amikor el kell jutniuk. A rendszer
-                                számos hozzáférési ponttal büszkélkedhet,
-                                amelyek az egész városra kiterjedő hálót
-                                alkotnak, és olyan csekély gonddal és
-                                fejfájással kavargatják egyikről a másikra, mint
-                                a BlastDance legújabb slágereinek előhívása.
+                                Az NCET, vagyis a Night City Electric Transit a
+                                város körüli gyors utazáshoz tervezett
+                                elektromos jármű, melynek fenntarthatósági
+                                szempontokban is kiemelt szerepe van. Emberek
+                                tömegei választják nap mint nap, mivel nemcsak
+                                környezetbarát, de modern megoldás is az
+                                eljutáshoz, ami a városi életmódhoz illeszkedik.
+                                Kényelmes és könnyen használható jármű, melyet a
+                                városi infrastruktúrához igazítottak. A rendszer
+                                számos hozzáférési ponttal büszkélkedhet, melyek
+                                az egész városra kiterjedő hálót alkotnak, és
+                                könnyű navigációt biztosítanak az utazóknak az
+                                úti céljuk felé haladva.
                             </p>
                         </div>
                         <div class="card">
@@ -172,17 +173,18 @@
                                 <img src="images/bus.png" alt="" />
                             </div>
                             <p>
-                                Az NCBT, vagyis a Night City Bus Transit egy
-                                sima eszköz a város körüli gyors utazáshoz.
-                                Emberek tömegei használják nap mint nap, mivel
-                                ez a legolcsóbb és gyakran a legkényelmesebb
-                                módja annak, hogy eljussanak oda, ahol el kell
-                                jutniuk, amikor el kell jutniuk. A rendszer
-                                számos hozzáférési ponttal büszkélkedhet,
-                                amelyek az egész városra kiterjedő hálót
-                                alkotnak, és olyan csekély gonddal és
-                                fejfájással kavargatják egyikről a másikra, mint
-                                a BlastDance legújabb slágereinek előhívása.
+                                Az NCBT, vagyis a Night City Bus Transit, egy
+                                hagyományos buszrendszer a városi közlekedéshez,
+                                melynek jelentősége a mindennapi életben
+                                kiemelkedő. Emberek tömegei támaszkodnak rá nap
+                                mint nap, mivel az egyik legmegbízhatóbb és
+                                legkényelmesebb közlekedési mód. A buszhálózat
+                                számos megállóval büszkélkedhet, melyeket az
+                                egész városban stratégiailag elhelyeztek annak
+                                érdekében, hogy könnyebbé tegyék az emberek
+                                számára az utazást és az átszállásokat, ezáltal
+                                minimalizálva az utazással járó stresszt és
+                                időveszteséget.
                             </p>
                         </div>
                         <div class="card">
@@ -192,17 +194,20 @@
                                 <img src="images/metro.png" alt="" />
                             </div>
                             <p>
-                                Az NCART, vagyis a Night City Area Rapid Transit
-                                egy sima eszköz a város körüli gyors utazáshoz.
-                                Emberek tömegei használják nap mint nap, mivel
-                                ez a legolcsóbb és gyakran a legkényelmesebb
-                                módja annak, hogy eljussanak oda, ahol el kell
-                                jutniuk, amikor el kell jutniuk. A rendszer
-                                számos hozzáférési ponttal büszkélkedhet,
-                                amelyek az egész városra kiterjedő hálót
-                                alkotnak, és olyan csekély gonddal és
-                                fejfájással kavargatják egyikről a másikra, mint
-                                a BlastDance legújabb slágereinek előhívása.
+                                Az NCART, vagyis a Night City Rapid Trasit, a
+                                város gyorsközlekedésére tervezett metróhálózat,
+                                melynek szerepe és jelentősége a városi
+                                infrastruktúrában kiemelkedő. Emberek tömegei
+                                részesítik előnyben nap mint nap, mivel ez a
+                                gyors és hatékony módja az eljutásnak a város
+                                különböző pontjaira. A metróhálózat nem föld
+                                alatti, hanem a város fölé épített sínrendszeren
+                                működik, ami egyedi megoldást kínál a város
+                                közlekedési kihívásaira. A metrórendszer számos
+                                állomással büszkélkedhet, melyek elhelyezése és
+                                működése szorosan összhangban van a városi élet
+                                ritmusával, minimalizálva ezzel az utazással
+                                járó stresszt, késéseket és a forgalmi dugókat.
                             </p>
                         </div>
                     </div>
