--- a/Frontend/user/map.html
+++ b/Frontend/user/map.html
@@ -9,6 +9,8 @@
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
         />
         <link rel="icon" type="image/x-icon" href="images/fav.png" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+        <script src="scripts/main.js"></script>
         <title>NCTC | Night City Transit Corporation</title>
     </head>
     <body>
@@ -16,14 +18,12 @@
             <nav class="topnav" id="myTopnav">
                 <div id="menuLeft">
                     <div>
-                        <a href="index.html"
-                            ><img src="images/navlogo.png" alt=""
-                        /></a>
+                        <img src="images/navlogo.png" alt="" />
                     </div>
                 </div>
                 <div id="menuRight">
                     <div id="start"><a href="index.html">KEZDŐLAP</a></div>
-                    <div id="plan"><a href="#">UTAZÁS TERVEZÉS</a></div>
+                    <div id="plan">UTAZÁS TERVEZÉS</div>
                 </div>
                 <div id="hamburger">
                     <a
